--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "email": "shahart@wix.com",
     "url": ""
   },
-  "main": "./dist/src/index.js",
-  "bin": "./dist/src/index.js",
+  "main": "./src/index.js",
+  "bin": "./src/index.js",
   "files": [
     "dist"
   ],
@@ -19,7 +19,6 @@
     "release": "yoshi release"
   },
   "dependencies": {
-    "babel-runtime": "^6.22.0",
     "copy-paste": "^1.3.0",
     "node-notifier": "^5.0.1",
     "speakeasy": "^2.0.0"
@@ -29,9 +28,6 @@
   },
   "private": false,
   "devDependencies": {
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "yoshi": "latest"
   },
