--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "./src/index.js",
   "bin": "./src/index.js",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "start": "yoshi start",
